# dashboard_israel

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/database/: db_connection.py  teste.ipynb
src/frontend/: dashboard.py
src/queries/: get_data.py  ingestao.ipynb  romaneio.py  teste.ipynb
